--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@modelcontextprotocol/sdk": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jszip": "^3.10.1",
     "octokit": "^4.1.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/jszip": "^3.4.0",
     "@types/node": "^22.14.1",
     "typescript": "^5.8.3"
   }
